# modulo-ssoft

./: .gitignore  .pypirc  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/SSofT/: SSofT_classes.py  SSofT_config.json  SSofT_config.yaml  SSofT_functions.py  SuperSSofT.py  SuperTotvs.py
