[metadata]
name = SSofT
version = 0.1.2
author = Liebentritt-Garfield
author_email = ssoft@teiaescolar.com.br
description = Classes de abstração das tabelas TotvsHot e SSofT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/teia-escolar/modulo-ssoft
project_urls =
    Bug Tracker = https://gitlab.com/teia-escolar/modulo-ssoft/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data=True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    pandas
    numpy
    #matplotlib
    seaborn
    pyarrow
    google-cloud-storage
    gspread

[options.packages.find]
where = src